# ethereum-indexer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: black.yml
data/: main.py
indexer/: .env.example  .pylintrc  README.md  pyproject.toml
indexer/src/: config.py  db.py  main.py
indexer/src/extract/: covalent.py  main.py
indexer/src/interfaces/: idb.py  iextract.py
indexer/src/transform/: covalent.py  main.py
server/: .env  .env.example  pyproject.toml
server/src/: db.py  main.py
server/src/azrael/: event.py  query_resolvers.py
server/src/azrael/sdl/: Query.graphql
server/src/azrael_v1/: event.py  query_resolvers.py
server/src/example_rumble_kong_league/: query_resolver.py  query_resolvers.py
server/src/example_rumble_kong_league/sdl/: Query.graphql
server/src/interfaces/: idb.py  iserver.py
server/src/sylvester/: event.py  query_resolvers.py
server/src/sylvester/sdl/: Query.graphql
server/src/sylvester_v1/: event.py  query_resolvers.py
server/src/sylvester_v1/sdl/: Query.graphql
src/: config.py  db.py  main.py
src/extract/: covalent.py  main.py
src/interfaces/: idb.py  itransform.py
src/servers/: main.py
src/tests/: test_extract.py
src/transform/: covalent.py  main.py
src/transformers/azrael/: config.json  main.py
src/transformers/example-rumble-kong-league-0.0.1/: config.json  main.py
src/transformers/example_rumble_kong_league/: config.json  main.py
src/transformers/rkl_club_auction/: config.json
src/transformers/sylvester/: config.json  main.py
src/utils/: address.py
(+15 files in other folders)
