[tool.poetry]
name = "ethereum-indexer"
version = "0.1.0"
description = "Blockchain indexer"
authors = ["RKL <hello@rl.games>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
eth-utils = "^2.0.0"
pymongo = "^4.0.1"
requests = "^2.27.1"
python-dotenv = "^0.19.2"
tartiflette-aiohttp = "^1.4.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.0"
pre-commit = "^2.17.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
